# Flask-SQLAlchemy-study

./: pyproject.toml
db/: test.db
flask_sqlalchemy_study/: application.py
