[tool.poetry]
name = "flask-sqlalchemy-study"
version = "0.1.0"
description = ""
authors = ["seriouskang <scdean110@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_sqlalchemy_study"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
ipython = "^8.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
